--- a/deployments/app-log-pv.yaml
+++ b/deployments/app-log-pv.yaml
@@ -2,12 +2,12 @@ kind: PersistentVolume
 apiVersion: v1
 metadata:
   name: log-persistent-volume
-  namespace: aditya
+  namespace: govinda
   labels:
     type: local
 spec:
   volumeMode: Filesystem
-  storageClassName: pv-aditya
+  storageClassName: pv-govinda
   capacity:
     storage: 500Mi
   accessModes:
