--- a/deployments/app-log-pvc.yaml
+++ b/deployments/app-log-pvc.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: log-persistent-claim
-  namespace: aditya
+  namespace: govinda
 spec:
   volumeMode: Filesystem
-  storageClassName: pv-aditya
+  storageClassName: pv-govinda
   accessModes:
     - ReadWriteOnce
   resources:
