--- a/deployments/business-deployment.yaml
+++ b/deployments/business-deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: business
   name: business
-  namespace: aditya
+  namespace: govinda
 spec:
   replicas: 2
   selector:
@@ -21,7 +21,7 @@ spec:
         persistentVolumeClaim:
           claimName: log-persistent-claim
       containers:
-      - image: adityapratapbhuyan/business:distributed
+      - image: apgovinda/business:distributed
         imagePullPolicy: Always
         name: business
         env:
