--- a/deployments/business-pod-deployment.yaml
+++ b/deployments/business-pod-deployment.yaml
@@ -4,14 +4,14 @@ metadata:
   labels:
     app: business
   name: business
-  namespace: aditya
+  namespace: govinda
 spec:
   volumes:
   - name: log-volume
     persistentVolumeClaim:
       claimName: log-persistent-claim
   containers:
-  - image: adityapratapbhuyan/business:distributed
+  - image: apgovinda/business:distributed
     imagePullPolicy: Always
     env:
     - name : CATEGORY_URL
