--- a/deployments/mysql-pv.yaml
+++ b/deployments/mysql-pv.yaml
@@ -2,11 +2,11 @@ kind: PersistentVolume
 apiVersion: v1
 metadata:
   name: mysql-persistent-volume
-  namespace: aditya
+  namespace: govinda
   labels:
     type: local
 spec:
-  storageClassName: mysql-aditya
+  storageClassName: mysql-govinda
   capacity:
     storage: 1Gi
   accessModes:
