--- a/deployments/mysql-pvc.yaml
+++ b/deployments/mysql-pvc.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-pv-claim
-  namespace: aditya
+  namespace: govinda
 spec:
-  storageClassName: mysql-aditya
+  storageClassName: mysql-govinda
   accessModes:
     - ReadWriteOnce
   resources:
