--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Build with Gradle
         uses: eskatos/gradle-command-action@v1
         with:
-          arguments: build
+          arguments: application:business-server:build & application:category-server:build
           gradle-version: 6.4
       - name: Verify Build
         run: |
