--- a/deployments/business-deployment.yaml
+++ b/deployments/business-deployment.yaml
@@ -18,8 +18,7 @@ spec:
     spec:
       volumes:
       - name: log-volume
-        persistentVolumeClaim:
-          claimName: log-persistent-claim
+        emptyDir: {}
       containers:
       - image: apgovinda/business:distributed
         imagePullPolicy: Always
