--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -17,10 +17,15 @@ jobs:
           java-version: 11
       - name: Start Ubuntu MySQL
         run: sudo systemctl start mysql.service
-      - name: Build with Gradle
+      - name: Build-Category with Gradle
         uses: eskatos/gradle-command-action@v1
         with:
-          arguments: :application:business-server:build & :application:category-server:build
+          arguments: application/category-server:build
+          gradle-version: 6.4.1
+      - name: Build-Business with Gradle
+        uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: application/business-server:build
           gradle-version: 6.4.1
       - name: Verify Build
         run: |
